--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,16 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Warning"
+ "Serilog": {
+  "Using": [ "Serilog.Sinks.File" ],
+    "MinimumLevel": "Warning",
+  "WriteTo": [
+    {
+      "Name": "File",
+      "Args": { "path": "logs\\PieshopLog_Release.txt" }
+    }
+  ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
+    "Properties": {
+      "Application": "Pieshop"
     }
   },
   "ConnectionStrings": {
