Updated to Rolling file and config changes

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,12 +1,22 @@
 {
   "Serilog": {
-    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.RollingFile", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Thread", "Serilog.Formatting.Compact" ],
     "MinimumLevel": "Debug",
     "WriteTo": [
-      { "Name": "Console" },
       {
-        "Name": "File",
-        "Args": { "path": "logs\\PieshopLog_Development.txt" }
+        "Name": "Console",
+        "Args": {
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{MachineName}] [{ThreadId}] {Message}{NewLine}{Exception}"
+        }
+      },
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "logs\\PieshopLog_Development.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{MachineName}] [{ThreadId}] {Message}{NewLine}{Exception}",
+          "fileSizeLimitBytes": 1000000,
+          "retainedFileCountLimit": "10"
+        }
       }
     ]
   },
