--- a/appsettings.json
+++ b/appsettings.json
@@ -1,11 +1,16 @@
 {
  "Serilog": {
-  "Using": [ "Serilog.Sinks.File" ],
-    "MinimumLevel": "Warning",
+  "Using": [ "Serilog.Sinks.RollingFile", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Thread", "Serilog.Formatting.Compact" ],
+  "MinimumLevel": "Warning",
   "WriteTo": [
     {
-      "Name": "File",
-      "Args": { "path": "logs\\PieshopLog_Release.txt" }
+      "Name": "RollingFile",
+      "Args": {
+        "pathFormat": "logs\\PieshopLog_Release.txt",
+        "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{MachineName}] [{ThreadId}] {Message}{NewLine}{Exception}",
+        "fileSizeLimitBytes": 1000000,
+        "retainedFileCountLimit": "10"
+      }
     }
   ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
