--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -22,5 +22,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PieShopDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "DistributedCaching": {
+    "InstanceName": "Pieshop",
+    "Configuration": "localhost"
   }
 }
