--- a/appsettings.json
+++ b/appsettings.json
@@ -1,18 +1,18 @@
 {
- "Serilog": {
-  "Using": [ "Serilog.Sinks.RollingFile", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Thread", "Serilog.Formatting.Compact" ],
-  "MinimumLevel": "Warning",
-  "WriteTo": [
-    {
-      "Name": "RollingFile",
-      "Args": {
-        "pathFormat": "logs\\PieshopLog_Release.txt",
-        "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{MachineName}] [{ThreadId}] {Message}{NewLine}{Exception}",
-        "fileSizeLimitBytes": 1000000,
-        "retainedFileCountLimit": "10"
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.RollingFile", "Serilog.Enrichers.Environment", "Serilog.Enrichers.Thread", "Serilog.Formatting.Compact" ],
+    "MinimumLevel": "Warning",
+    "WriteTo": [
+      {
+        "Name": "RollingFile",
+        "Args": {
+          "pathFormat": "logs\\PieshopLog_Release.txt",
+          "outputTemplate": "{Timestamp:yyyy-MM-dd HH:mm:ss} [{Level}] [{SourceContext}] [{MachineName}] [{ThreadId}] {Message}{NewLine}{Exception}",
+          "fileSizeLimitBytes": 1000000,
+          "retainedFileCountLimit": "10"
+        }
       }
-    }
-  ],
+    ],
     "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ],
     "Properties": {
       "Application": "Pieshop"
@@ -20,5 +20,9 @@
   },
   "ConnectionStrings": {
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=PieShopDemo;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "DistributedCaching": {
+    "InstanceName": "Pieshop",
+    "Configuration":  "myliveredisserver"
   }
 }
